--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,9 @@
 #header {
     color: green;
 }
+
+.joke_card {
+    display: inline-block;
+    border: 1px solid #ccc;
+    background-color: pink;
+}
