--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,16 @@
+body {
+    background-color: lightgray;
+}
+
 #header {
-    color: green;
+    color: seagreen;
 }
 
 .joke_card {
     text-align: center;
     display: inline-grid;
-    border: 1px solid #ccc;
-    background-color: pink;
+    border: 1px solid black;
+    background-color: lightseagreen;
     padding: 1rem;
     width: 15rem;
     height: 20rem;
@@ -23,4 +27,17 @@
 
 .textarea {
     width: 350px;
+}
+
+.joke-divs {
+    margin: auto;
+}
+
+#setup-div {
+    border: 1px solid black;
+    width: 15rem;
+    height: 6rem;
+    background-color: grey;
+    text-align: center;
+    color: white;
 }
