--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,10 +19,11 @@ body {
 
 #form_container {
     margin: auto;
-    color: white;
+    color: black;
     text-align: center;
     width: 50%;
-    background-color: blue;
+    background-color: lightseagreen;
+    border: 1px solid black;
 }
 
 .textarea {
